foo/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleeper
  labels:
    app: sleeper
spec:
  selector:
    matchLabels:
      app: sleeper
  template:
    metadata:
      labels:
        app: sleeper
    spec:
      containers:
      - name: sleeper
        image: n3a1/sleeper:1.3
