foo/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo
spec:
  hosts:
    - beta.default.svc.cluster.local
  http:
  - match:
    - headers:
        X-Beta-Version:
          exact: "1"
    route:
    - destination:
        host: beta.default.svc.cluster.local
        subset: v1
  - match:
    - headers:
        x-beta-version:
          exact: "2"
    route:
    - destination:
        host: beta.default.svc.cluster.local
        subset: v2
  - route:
    - destination:
        host: beta.default.svc.cluster.local
